--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -13,6 +13,7 @@ env:
   SONAR_ORG: flexbase
   SONAR_PROJECT_KEY: ${{ inputs.project_key }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 jobs:
   build:
