--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -6,7 +6,7 @@ on:
     branches: [ $default-branch ]
 
 jobs:
-  build:
+  yarn:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
