--- a/.github/workflows/typescript.publish.yml
+++ b/.github/workflows/typescript.publish.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         registry-url: 'https://registry.npmjs.org'
+        always-auth: true
         node-version: latest
         cache: 'yarn'
 
