--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -35,7 +35,8 @@ jobs:
         name: dist
         path: |
           dist
-          package.json
+          LICENSE
+          readme.md
           yarn.lock
         retention-days: 1
 
