--- a/.github/workflows/typescript.publish.yml
+++ b/.github/workflows/typescript.publish.yml
@@ -37,10 +37,4 @@ jobs:
       run: yarn install --frozen-lockfile
 
     - name: Publish
-      run: |
-        if [ -z "${{ inputs.tag }}" ]
-        then
-          yarn publish --access public
-        else
-          yarn publish --access public --tag ${{ inputs.tag }}
-        fi
+      run: yarn publish --access public --tag ${{ inputs.tag }}
