--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -3,8 +3,9 @@ on:
   workflow_call:
     inputs:
       package_folder:
-        required: true
+        required: false
         type: string
+        default: 'dist'
   pull_request:
   push:
     branches: [ $default-branch ]
