--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -33,8 +33,8 @@ jobs:
         node-version: latest
         cache: 'yarn'
 
-    - name: Setup yarn
-      run: yarn install --frozen-lockfile
+    # - name: Setup yarn
+    #   run: yarn install --frozen-lockfile
 
     - name: Publish
       run: yarn publish --access public --tag ${{ inputs.tag }}
