--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -24,9 +24,9 @@ on:
     branches: [ $default-branch ]
 
 env:
-  PACKR_MAJOR_VERSION: ${{ inputs.major_version }}
-  PACKR_MINOR_VERSION: ${{ inputs.minor_version }}
-  PACKR_REVISION: ${{ inputs.revision }}
+  PACKR_MAJOR_VERSION: 
+  PACKR_MINOR_VERSION: 
+  PACKR_REVISION: 
 
 jobs:
   yarn:
@@ -40,6 +40,18 @@ jobs:
         node-version: latest
         cache: 'yarn'
 
+    - name: Build major version env
+      if: ${{ inputs.major_version != ''}}
+      run: echo 'PACKR_MAJOR_VERSION=--major ${{ inputs.major_version }}' >> $GITHUB_ENV
+
+    - name: Build minor version env
+      if: ${{ inputs.minor_version != ''}}
+      run: echo 'PACKR_MINOR_VERSION=--minor ${{ inputs.minor_version }}' >> $GITHUB_ENV
+
+    - name: Build revision env
+      if: ${{ inputs.revision != ''}}
+      run: echo 'PACKR_REVISION=--revision ${{ inputs.revision }}' >> $GITHUB_ENV
+
     - name: Install
       run: yarn install --frozen-lockfile
 
@@ -50,19 +62,7 @@ jobs:
       run: yarn lint
 
     - name: Test
-      run: yarn test
-
-    - name: Build major version env
-      if: ${{ env.PACKR_MAJOR_VERSION != ''}}
-      run: echo '::set-env name=PACKR_MAJOR_VERSION::--major $PACKR_MAJOR_VERSION'
-
-    - name: Build minor version env
-      if: ${{ env.PACKR_MINOR_VERSION != ''}}
-      run: echo '::set-env name=PACKR_MINOR_VERSION::--minor $PACKR_MINOR_VERSION'
-
-    - name: Build revision env
-      if: ${{ env.PACKR_REVISION != ''}}
-      run: echo '::set-env name=PACKR_REVISION::--revision $PACKR_REVISION'
+      run: yarn test    
 
     - name: Packr
       if: ${{ inputs.use_packr == true }}
