--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -5,6 +5,7 @@ on:
       tag:
         required: false
         type: string
+        default: latest
     secrets:
       NODE_AUTH_TOKEN:
         required: true
