--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -23,7 +23,11 @@ jobs:
     name: Sonarcloud Analysis
     runs-on: ubuntu-latest
     steps:
-        
+
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Retrieve coverage artifacts
       uses: actions/download-artifact@v3
       with:
