--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -32,6 +32,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: code-coverage-report
+        path: coverage/lcov.info
 
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
