--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -40,4 +40,4 @@ jobs:
         args: >
           -Dsonar.organization=${{ env.SONAR_ORG }}
           -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
-          -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+          -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
