--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -32,7 +32,11 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: code-coverage-report
-        path: coverage/lcov.info
+        path: coverage
+      
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: coverage
 
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
