--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -7,11 +7,11 @@ on:
         type: string
         default: latest
     secrets:
-      NPM_TOKEN:
+      NODE_AUTH_TOKEN:
         required: true
 
 env:
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
 
 jobs:
   npm:
