--- a/.github/workflows/release.notifier.yml
+++ b/.github/workflows/release.notifier.yml
@@ -26,11 +26,12 @@ permissions:
 
 jobs:  
   prod-notify:
-  needs: [prod-notify-success, prod-notify-failure]
-  if: ${{ always() }}
-  steps:
-    - name: complete notificaiton run
-      run: echo "Completed prod notification"
+    runs-on: ubuntu-18.04
+    needs: [prod-notify-success, prod-notify-failure]
+    if: ${{ always() }}
+    steps:
+      - name: complete notificaiton run
+        run: echo "Completed prod notification"
 
   prod-notify-success:
     runs-on: ubuntu-18.04
