--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -35,6 +35,7 @@ jobs:
           configuration-path: .github/pr-labeler.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
   yarn:
     name: Build/Lint/Test/Packr
     runs-on: ubuntu-latest
@@ -42,10 +43,23 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Disabling shallow clone is recommended for improving relevancy of reporting
+    
+    - name: "Check file existence for yarn"
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "yarn-lock.json"
+      
     - uses: actions/setup-node@v3
+      if: steps.check_files.outputs.files_exists == 'true'
       with:
         node-version: latest
         cache: 'yarn'
+
+     - uses: actions/setup-node@v3
+      if: steps.check_files.outputs.files_exists == 'false'
+      with:
+        node-version: latest
+        cache: 'npm'
 
     - name: Build major version env
       if: ${{ inputs.major_version != ''}}
@@ -59,17 +73,37 @@ jobs:
       if: ${{ inputs.revision != ''}}
       run: echo 'PACKR_REVISION=--revision ${{ inputs.revision }}' >> $GITHUB_ENV
 
-    - name: Install
+    - name: Install yarn
+      if: steps.check_files.outputs.files_exists == 'true'
       run: yarn install --frozen-lockfile
 
-    - name: Build
+    - name: Build yarn
+      if: steps.check_files.outputs.files_exists == 'true'
       run: yarn build
 
-    - name: Lint
+    - name: Lint yarn
+      if: steps.check_files.outputs.files_exists == 'true'
       run: yarn lint
 
-    - name: Test
-      run: yarn test    
+    - name: Test yarn
+      if: steps.check_files.outputs.files_exists == 'true'
+      run: yarn test   
+
+    - name: Install npm
+      if: steps.check_files.outputs.files_exists == 'false'
+      run: npm install --ci
+
+    - name: Build npm
+      if: steps.check_files.outputs.files_exists == 'false'
+      run: npm build
+
+    - name: Lint npm
+      if: steps.check_files.outputs.files_exists == 'false'
+      run: npm lint
+
+    - name: Test npm
+      if: steps.check_files.outputs.files_exists == 'false'
+      run: npm test    
 
     - name: Packr
       if: ${{ inputs.use_packr == true }}
