--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -35,8 +35,8 @@ jobs:
           configuration-path: .github/pr-labeler.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-  yarn:
+
+  build-lint-test-packr:
     name: Build/Lint/Test/Packr
     runs-on: ubuntu-latest
     steps:
