--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -48,7 +48,7 @@ jobs:
       id: check_files
       uses: andstor/file-existence-action@v1
       with:
-        files: "yarn-lock.json"
+        files: "yarn.lock"
       
     - uses: actions/setup-node@v3
       if: steps.check_files.outputs.files_exists == 'true'
