--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -60,66 +60,57 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 # Disabling shallow clone is recommended for improving relevancy of reporting
-    - uses: actions/setup-node@v3
-      with:
-        node-version: latest
-        cache: ${{ inputs.package_manager }}
-
-  yarn:
-    if: inputs.package_manager == 'yarn'
+    - name: Create cli install command yarn
+      if: inputs.package_manager == 'yarn'
+      run: echo "CLI_INSTALL: yarn install --frozen-lockfile" >> $GITHUB_ENV
+    - name: Create cli install command npm
+      if: inputs.package_manager == 'npm'
+      run: echo "CLI_INSTALL: npm run --ci" >> $GITHUB_ENV
+    - name: Create cli build command yarn
+      if: inputs.package_manager == 'yarn'
+      run: echo "CLI_BUILD: yarn build" >> $GITHUB_ENV
+    - name: Create cli build command npm
+      if: inputs.package_manager == 'npm'
+      run: echo "CLI_BUILD: npm run build" >> $GITHUB_ENV
+    - name: Create cli lint command yarn
+      if: inputs.package_manager == 'yarn'
+      run: echo "CLI_LINT: yarn lint" >> $GITHUB_ENV
+    - name: Create cli lint command npm
+      if: inputs.package_manager == 'npm'
+      run: echo "CLI_LINT: npm run lint" >> $GITHUB_ENV
+    
+  build-lint-test:
     name: Build/Lint/Test/Packr
     needs: [packr-versions, setup]
     runs-on: ubuntu-latest
     steps:
-    - name: Install yarn
-      run: yarn install --frozen-lockfile
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
+    - uses: actions/setup-node@v3
+      with:
+        node-version: latest
+        cache: ${{ inputs.package_manager }}
+    - name: Install dependencies
+      run: ${{ env.CLI_INSTALL }}
 
-    - name: Build yarn
-      run: yarn build
+    - name: Build app
+      run: ${{ env.CLI_BUILD }}
 
-    - name: Lint yarn
-      run: yarn lint
+    - name: Lint app
+      run: ${{ env.CLI_LINT }}
 
     - name: Test yarn
-      run: yarn test   
+      run: ${{ inputs.package_manager }} test
 
     - name: Packr
       if: ${{ inputs.use_packr == true }}
       run: yarn packr ${{ env.PACKR_MAJOR_VERSION }} ${{ env.PACKR_MINOR_VERSION }} ${{ env.PACKR_REVISION }}
 
-  npm:
-    if: inputs.package_manager == 'npm'
-    name: Build/Lint/Test/Packr
-    needs: [packr-versions, setup]
-    runs-on: ubuntu-latest
-    steps:
-    - name: Install npm
-      run: npm install --ci
-
-    - name: Build npm
-      run: npm run build
-
-    - name: Lint npm
-      run: npm run lint
-
-    - name: Test npm
-      run: npm run test    
-
-    - name: Packr
-      if: ${{ inputs.use_packr == true }}
-      run: npm run packr ${{ env.PACKR_MAJOR_VERSION }} ${{ env.PACKR_MINOR_VERSION }} ${{ env.PACKR_REVISION }}
-
   artifacts:
     name: Store artifacts   
     runs-on: ubuntu-latest
-    needs: [yarn, npm]
-    if: |
-      always() &&
-      (needs.yarn.result == 'success' || needs.yarn.result == 'skipped') &&
-      (needs.npm.result == 'success' || needs.npm.result == 'skipped')
+    needs: [build-lint-test]
     steps:
     - name: Store build artifacts
       if: ${{ inputs.package_folder != ''}}
