--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -62,22 +62,22 @@ jobs:
     steps:
     - name: Create cli install command yarn
       if: inputs.package_manager == 'yarn'
-      run: echo "CLI_INSTALL: yarn install --frozen-lockfile" >> $GITHUB_ENV
+      run: echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
     - name: Create cli install command npm
       if: inputs.package_manager == 'npm'
-      run: echo "CLI_INSTALL: npm run --ci" >> $GITHUB_ENV
+      run: echo "CLI_INSTALL=npm run --ci" >> $GITHUB_ENV
     - name: Create cli build command yarn
       if: inputs.package_manager == 'yarn'
-      run: echo "CLI_BUILD: yarn build" >> $GITHUB_ENV
+      run: echo "CLI_BUILD=yarn build" >> $GITHUB_ENV
     - name: Create cli build command npm
       if: inputs.package_manager == 'npm'
-      run: echo "CLI_BUILD: npm run build" >> $GITHUB_ENV
+      run: echo "CLI_BUILD=npm run build" >> $GITHUB_ENV
     - name: Create cli lint command yarn
       if: inputs.package_manager == 'yarn'
-      run: echo "CLI_LINT: yarn lint" >> $GITHUB_ENV
+      run: echo "CLI_LINT=yarn lint" >> $GITHUB_ENV
     - name: Create cli lint command npm
       if: inputs.package_manager == 'npm'
-      run: echo "CLI_LINT: npm run lint" >> $GITHUB_ENV
+      run: echo "CLI_LINT=npm run lint" >> $GITHUB_ENV
     
   build-lint-test:
     name: Build/Lint/Test/Packr
