--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -44,23 +44,17 @@ jobs:
         node-version: latest
         cache: {{ inputs.package_manager }}
     
-    - name: install jq
-      run: apt-get install jq
-
-    - name: check if beta and update package.json
+    - name: install json if beta
       if: inputs.tag == 'beta'
-      uses: sergeysova/jq-action@v2
-      id: version
-      with:
-        cmd: 'jq .version package.json -r'
-
-      #run: echo "VERSION=${{jq -r .version package.json}} >> $GITHUB_ENV
-    
-    - name: set package.json for beta
+      run: npm i -g -y json
+     
+     - name: version value from package.json
       if: inputs.tag == 'beta'
-      uses: sergeysova/jq-action@v2
-      with:
-        cmd: 'echo "`jq '.version="${{steps.version.outputs.value}}-beta.${{github.event.number}}"' package.json`" > package.json'
+      run: echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
+
+    - name: beta - update package.json
+      if: inputs.tag == 'beta'
+      run: json -I -f package.json -e "this.version=\"{{env.}}-beta.${{github.event.number}}}\""
       #run: echo "`jq '.version="${{env.VERSION}}-beta.${{github.event.number}}"' package.json`" > package.json
 
     - name: Setup yarn
