--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -46,7 +46,7 @@ jobs:
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
         run: |
-          npm i -g -y json
+          npm i -g json
           echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
           json -I -f package.json -e "this.version=\"{{env.}}-beta.${{github.event.number}}}\""
 
