--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -49,7 +49,8 @@ jobs:
           npm i -g json
           echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
           json -I -f package.json -e "this.version=\"{{env.}}-beta.${{github.event.number}}}\""
-
+        shell: run
+        
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
         run: yarn install --frozen-lockfile
