--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -47,10 +47,10 @@ jobs:
         if: inputs.tag == 'beta'
         run: |
           npm i -g json
-          echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
+          echo PACKAGE_VERSION=${{json -f package.json | json version}} >> $GITHUB_ENV
           json -I -f package.json -e "this.version=\"{{env.}}-beta.${{github.event.number}}}\""
         shell: run
-        
+
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
         run: yarn install --frozen-lockfile
