--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           npm i -g json
           echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
-          json -I -f package.json -e "this.version=\"{{env.}}-beta.${{github.event.number}}}\""
+          json -I -f package.json -e "this.version=\"{{env.PACKAGE_VERSION}}-beta.${{github.event.number}}}\""
         shell: run
         
       - name: Setup yarn
