--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -42,15 +42,11 @@ jobs:
           always-auth: true
           node-version: latest
           cache: {{ inputs.package_manager }}
-            
+
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
-        run: |
-          npm i -g json
-          echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
-          json -I -f package.json -e "this.version=\"{{env.PACKAGE_VERSION}}-beta.${{github.event.number}}}\""
-        shell: run
-        
+        run: npm i -g json
+
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
         run: yarn install --frozen-lockfile
