--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -48,7 +48,12 @@ jobs:
         run: npm i -g json
       
       - name: set package version
+        if: inputs.tag == 'beta'
         run: echo "PACKAGE_VERSION=${{json -f package.json | json version}}" >> $GITHUB_ENV
+
+      - name: run package.json update for beta
+        if: inputs.tag == 'beta'
+        run: json -I -f package.json -e "this.version=\"{{env.PACKAGE_VERSION}}-beta.${{github.event.number}}}\""
 
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
