--- a/.github/workflows/typescript.publish.npm.yml
+++ b/.github/workflows/typescript.publish.npm.yml
@@ -43,13 +43,12 @@ jobs:
           node-version: latest
           cache: ${{ inputs.package_manager }}
 
+        # reference: https://stackoverflow.com/questions/54310050/how-to-version-build-artifacts-using-github-actions
       - name: beta - version value from package.json
         if: inputs.tag == 'beta'
         run: |
           npm i -g json
-          echo "PACKAGE_VERSION=$(json -f package.json | json version)-beta.${{ github.run_attempt }}" >> $GITHUB_ENV
-          json -I -f package.json -e "this.version=\"${{ env.PACKAGE_VERSION }}\""
-        # reference: https://stackoverflow.com/questions/54310050/how-to-version-build-artifacts-using-github-actions
+          json -I -f package.json -e "this.version=\"$(json -f package.json | json version)-beta.${{ github.run_attempt }}\""
 
       - name: Setup yarn
         if: inputs.package_manager == 'yarn'
