update naming for cleaned branch

--- a/.github/workflows/deploy.backend.stack.yml
+++ b/.github/workflows/deploy.backend.stack.yml
@@ -84,7 +84,7 @@ jobs:
           node-version: '16'
       
       - name: clean branch name for platter
-        run: echo echo "${{ $GITHUB_HEAD_REF }}" | tr -cd '[:alnum:]_-' >> $GITHUB_CLEANED_BRANCH
+        run: echo echo "${{ GITHUB_HEAD_REF }}" | tr -cd '[:alnum:]_-' >> $GITHUB_CLEANED_BRANCH
         # Platter initialization and branch creation
         # pass in instantiated instance details to Google cloud for baking to Google Cloud Container
       - if: github.head_ref != 'production' && github.head_ref != 'main' && github.head_ref
@@ -140,8 +140,10 @@ jobs:
     if: event.pull_request.closed && inputs.close_on_merge == true 
     runs-on: ubuntu-latest
     steps:
+      - name: clean branch name for platter
+        run: echo echo "${{ GITHUB_HEAD_REF }}" | tr -cd '[:alnum:]_-' >> $GITHUB_CLEANED_BRANCH
       - name: run the unstacking of this branch
-        run: npx platter postgres branch delete $1 --instance ${{PLATTER_INSTANCE}}
+        run: npx platter postgres branch delete $1 --instance ${{ env.GITHUB_CLEANED_BRANCH }}
       - uses: kriasoft/delete-dns-record@v1
         with:
           name: "{PR}-review.example.com"
